<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/menu" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/modify_event_titulo"
            android:textSize="20sp"
            tools:fontFamily="@font/montserrat_light"
            tools:layout_editor_absoluteX="93dp"
            tools:layout_editor_absoluteY="60dp" />

        <LinearLayout
            android:layout_width="400dp"

            android:layout_height="wrap_content"

            android:orientation="vertical"
            tools:layout_editor_absoluteX="0"
            tools:layout_editor_absoluteY="98dp">

            <TextView
                android:id="@+id/user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="10dp"
                android:text="@string/name_of_event"
                android:textSize="20sp"
                tools:fontFamily="@font/montserrat_light" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginBottom="10dp"
                    android:hint="nombre1" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/Calendario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="30dp"
                android:text="@string/calendar"
                android:textSize="20sp"
                tools:fontFamily="@font/montserrat_light" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="40dp"
                    android:hint="nombre1" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/days_of_the_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/day_of_the_week"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                tools:fontFamily="@font/montserrat_light" />

            <LinearLayout
                android:layout_width="335dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"

                android:orientation="horizontal">


                <Button
                    android:id="@+id/dayButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/day_button"
                    android:backgroundTint="#00BCD4"
                    android:elevation="4dp"
                    android:fontFamily="sans-serif-medium"
                    android:padding="10dp"
                    android:text="@string/M"
                    android:textColor="#000080"
                    android:textSize="18sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:orientation="vertical">


                <Switch
                    android:id="@+id/switch_allday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:text="@string/All_day" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/from"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/from"
                        android:textSize="15sp"
                        tools:fontFamily="@font/montserrat_light"
                        android:layout_marginEnd="10dp"/>
                    <EditText
                    android:id="@+id/from_date"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="date"
                        android:layout_marginEnd="10dp"/>
                    <TextView
                        android:id="@+id/to"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/to"
                        android:textSize="15sp"
                        tools:fontFamily="@font/montserrat_light"
                        android:layout_marginEnd="10dp"
                        />
                    <EditText
                        android:id="@+id/fto_date"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="date" />
                </LinearLayout>



                <Switch
                    android:id="@+id/switch_repeat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:text="@string/Repeat" />


                <RadioButton
                    android:id="@+id/everyday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/Everyday" />

                <RadioButton
                    android:id="@+id/every_week"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/Every_week" />

                <RadioButton
                    android:id="@+id/revery_month"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/Every_month" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/notif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/notifications" />

                <TextView
                    android:id="@+id/reminder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Reminder"
                    android:textSize="20sp"
                    tools:fontFamily="@font/montserrat_light" />


                <EditText
                    android:id="@+id/editTextNumber"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="7dp"
                    android:ems="10"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/before"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/before"
                    android:textSize="15sp"
                    tools:fontFamily="@font/montserrat_light" />
            </LinearLayout>


        </LinearLayout>




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="650dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/discard"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#40CFFF"
            tools:fontFamily="@font/montserrat_light"
            android:text="@string/Discard"
            android:textColor="#100000" />

        <Button
            android:id="@+id/save"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            tools:fontFamily="@font/montserrat_light"
            android:backgroundTint="#40CFFF"
            android:foregroundTint="#03A9F4"
            android:textColor="#100000"
            android:text="@string/save" />
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>