<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"


        android:orientation="vertical">

        <ImageView
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/menu" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Profile_info"
            android:textSize="20sp"
            tools:fontFamily="@font/montserrat_light"
            tools:layout_editor_absoluteX="93dp"
            tools:layout_editor_absoluteY="60dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="116dp"
            tools:layout_editor_absoluteY="128dp">
            <TextView
                android:id="@+id/user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/username"
                android:textSize="20sp"
                tools:fontFamily="@font/montserrat_light"
                />



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="40dp"
                    android:hint="user1" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/name"
                android:textSize="20sp"
                tools:fontFamily="@font/montserrat_light"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="40dp"
                    android:hint="name1" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/email"
                android:textSize="20sp"
                tools:fontFamily="@font/montserrat_light"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="40dp"
                    android:hint="email1" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/dd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/bith"
                android:textSize="20sp"
                tools:fontFamily="@font/montserrat_light"
                />

            <EditText
                android:id="@+id/editTextDate3"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginStart="40dp"
                android:ems="10"
                android:hint="01-03-2002"
                android:inputType="date" />
            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/phone"
                android:textSize="20sp"
                tools:fontFamily="@font/montserrat_light"
                />
            <EditText
                android:id="@+id/editTextPhone"
                android:layout_marginStart="30dp"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:ems="10"
                android:inputType="phone" />

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/gender"
                android:textSize="20sp"
                tools:fontFamily="@font/montserrat_light" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="40dp"
                    android:hint="none" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="594dp">

            <TextView
                android:id="@+id/changepsd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/changepass"

                android:textColor="#0000FF"
                android:textSize="15sp"
                android:textStyle="normal"
                tools:fontFamily="@font/montserrat_light" />

            <TextView
                android:id="@+id/deleteacc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"

                android:textColor="#0000FF"
                android:textSize="15sp"
                android:textStyle="normal"
                tools:fontFamily="@font/montserrat_light" />

            <TextView
                android:id="@+id/help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help"

                android:textColor="#0000FF"
                android:textSize="15sp"
                tools:fontFamily="@font/montserrat_light" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:backgroundTint="#2499C7"
                android:text="@string/signout" />


        </LinearLayout>


    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>