<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="30dp">

        <ImageView
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/menu" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/new_acc"
            android:textSize="20sp"
            tools:fontFamily="@font/montserrat_light"
            tools:layout_editor_absoluteX="93dp"
            tools:layout_editor_absoluteY="60dp" />

        <LinearLayout
            android:layout_width="400dp"

            android:layout_height="wrap_content"

            android:orientation="vertical"
            tools:layout_editor_absoluteX="0"
            tools:layout_editor_absoluteY="98dp">
            <TextView
                android:id="@+id/user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/username"
                android:textSize="20sp"
                tools:fontFamily="@font/montserrat_light"
                />



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="40dp"
                    android:hint="user1" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/name"
                android:textSize="20sp"
                tools:fontFamily="@font/montserrat_light"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="40dp"
                    android:hint="name1" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/name2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/email"
                android:textSize="20sp"
                tools:fontFamily="@font/montserrat_light"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="40dp"
                    android:hint="email1" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/confirm_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/confirm_mail"
                android:textSize="20sp"
                tools:fontFamily="@font/montserrat_light"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="40dp"
                    android:hint="email1" />
            </com.google.android.material.textfield.TextInputLayout>




            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/phone"
                android:textSize="20sp"
                tools:fontFamily="@font/montserrat_light"
                />
            <EditText
                android:id="@+id/editTextPhone"
                android:layout_marginStart="30dp"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:ems="10"
                android:inputType="phone" />





            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/password"
                android:textSize="20sp"
                tools:fontFamily="@font/montserrat_light" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="40dp"
                    android:hint="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/confirm_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/confirm_password"
                android:textSize="20sp"
                tools:fontFamily="@font/montserrat_light" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="40dp"
                    android:hint="none" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="600dp"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="618dp">


        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#2499C7"
            android:text="@string/create_acc" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>